# pw-router

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  config.example.yaml  fly.toml.example  llms-full.txt  llms.txt  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  schedule.yml
docs/: architecture.md  deployment.md  plugins.md
plugins/: __init__.py  example_logger.py  example_redact.py
pw_router/: __init__.py  __main__.py  audit_log.py  config.py  health.py  middleware.py  models.py  providers.py  rate_limit.py  router.py  server.py  usage.py
tests/: conftest.py  test_audit_log.py  test_config.py  test_health.py  test_middleware.py  test_providers.py  test_rate_limit.py  test_router.py  test_server.py  test_usage.py
